src/snapshots/afrotd__parser__tests__interpreation_html_7.3.2_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.2.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach dem Zwei-Minuten-Timeout in der vierten Spielperiode findet
            A10 keinen freien Receiver. Um Zeit einzusparen, wirft er einen
            unvollständigen Vorwärtspass in eine Zone, in der sich kein
            berechtigter Team A-Spieler befindet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegaler Vorwärtspass wegen absichtlichen Wegwerfens eines
                Vorwärtspasses. Strafe – Down- verlust am Punkt des Fouls. Da
                sich dieses Foul nach dem Zwei-Minuten-Timeout ereignet, fällt
                es unter die 10-Sekunden-Abzugs-Regel (Regeln 3.4.4).
            </p>
        </details>
    </div>
</article>
