src/snapshots/afrotd__parser__tests__interpreation_html_7.3.2_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.2.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Im dritten Down gegen Ende der ersten Halbzeit fängt A1, der sich 7
            Meter hinter dem Snapper aufgestellt hat, den Snap und wirft den
            Ball sofort vorwärts auf den Boden.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legales Spiel.
            </p>
        </details>
    </div>
</article>
