src/snapshots/afrotd__parser__tests__interpreation_html_7.3.4_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.4.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Der berechtigte A88 geht während eines Downs, in dem ein legaler
            Vorwärtspass geworfen wird, freiwillig ins Aus. Er kehrt zurück
            inbounds, berührt aber nicht den Pass und wird von einem Gegner
            festgehalten, bevor der Ball von irgendeinem Spieler berührt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Keine Passbehinderung – A88 ist nicht berechtigt, einen legalen
                Vorwärtspass zu fangen. Foul – Halten durch die Defense, Strafe
                – 10 Meter vom Previous Spot und automatischer First Down.
            </p>
        </details>
    </div>
</article>
