src/snapshots/afrotd__parser__tests__interpreation_html_7.3.6_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Zwei gegnerische Spieler erreichen einen legalen Vorwärtspass,
            während sie springen, und beide Spieler kehren gleichzeitig auf den
            Boden innerhalb des Feldes zurück.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Gleichzeitiges Fangen, Ball wird dem passenden Team zuerkannt
                (Regel 2.4.4).
            </p>
        </details>
    </div>
</article>
