src/snapshots/afrotd__parser__tests__interpreation_html_7.3.6_10.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.X
        </p>
    </div>
    <div class="message-body">
        <p>
            Der in der Luft befindliche Receiver A85 ergreift den Ball. Bei der
            Landung berührt er zuerst den Boden inbounds mit seinem linken Fuß,
            als er inbounds zu Boden fällt. Unmittelbar, nachdem A85 auf den
            Boden prallt, wird der Ball frei, berührt aber nie den Boden, bevor
            der Spieler den Ball wieder unter Kontrolle hat.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Vollständiger Pass. Wenn der inbounds befindliche Receiver zu
                Boden fällt und die Kontrolle verliert, ist das Fangen
                vollständig, solange der Spieler inbounds bleibt und der Ball
                nie den Boden berührt.
            </p>
        </details>
    </div>
</article>
