src/snapshots/afrotd__parser__tests__interpreation_html_7.3.6_13.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.XIII
        </p>
    </div>
    <div class="message-body">
        <p>
            Receiver A85 befindet sich inbounds in der Luft über Team B’s
            Endzone und ergreift einen Vorwärtspass. Während er sich in der
            Luft befindet, wird er von einem Defender geblockt und fällt
            dadurch zu Boden. Unmittelbar nachdem A85 auf den Boden prallt,
            wird der Ball frei und berührt den Boden.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Unvollständiger Pass. Ein in der Luft befindlicher Receiver,
                der berührt wird, bevor er alle Voraussetzungen zur
                Vervollständigung des Fangens erfüllt, muss weiterhin die
                Kontrolle über den Ball behalten, nachdem er zu Boden gefallen
                ist.
            </p>
        </details>
    </div>
</article>
