src/snapshots/afrotd__parser__tests__interpreation_html_7.3.6_14.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.XIV
        </p>
    </div>
    <div class="message-body">
        <p>
            Der berechtigte Receiver A80 befindet sich in der Luft, als er
            einen legalen Vorwärtspass erreicht. Er ergreift den Ball fest mit
            seinen Händen und als er auf den Boden kommt, berührt die Nase des
            Balles den Boden, bevor ein Körperteil von A80 den Boden berühren
            kann. A80 hält den Ball weiterhin fest unter Kontrolle in seinen
            Händen. Danach berührt A80 mit seinen Knien den Boden und er hat
            den Ball fest in seinem Besitz.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Vollständiger Pass.
            </p>
        </details>
    </div>
</article>
